updated start screen wording

--- a/game/index.html
+++ b/game/index.html
@@ -615,12 +615,14 @@
       <div class="start-screen">
         <h2>How to Play</h2>
         <div class="rules">
-          <p><strong>Goal:</strong> Read a snippet from an Oscar acceptance speech and guess the movie and category. 5 rounds total.</p>
-          <p><strong>Scoring:</strong> 10 points per speech. Each hint or wrong guess costs 2 points. You get 3 guesses per round.</p>
+          <p><strong>Goal:</strong> Read a snippet from an Oscar acceptance speech and guess the movie and category. Winners from 1993-2024 are eligible.</p>
+          <p><strong>Scoring:</strong> 5 rounds. Up to 10 points per round. Each hint or wrong guess costs 2 points. 3 guesses allowed.</p>
           <p><strong>Hints:</strong> Two available — a list of possible films, and a cryptic plot clue.</p>
-          <p>Spot an error? You can report it after each round.</p>
+          <p>Spot an error? Use the "Report an issue" button at the bottom after each round to help improve the game.</p>
         </div>
         <button class="btn-primary" id="start-btn" style="max-width:200px">Start Game</button>
+        <br>
+        <a class="report-link" href="sources.html">Data Sources</a>
       </div>
     `;
     document.getElementById('start-btn').addEventListener('click', () => {
